[project]
name = "streamlit-mssql-demo"
version = "0.1.0"
description = "Streamlit UI example that queries Microsoft SQL Server with SQLAlchemy."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "pyodbc>=5.1",
    "sqlalchemy>=2.0",
    "streamlit>=1.33",
]
