[project]
name = "streamlit-mssql-demo"
version = "1.0.0"
description = "Streamlit UI example that queries Microsoft SQL Server with SQLAlchemy."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0",
    "python-dotenv>=1.2.2",
    "pyodbc>=5.1",
    "sqlalchemy>=2.0",
    "streamlit>=1.56",
]
